--- a/Engine/msvc10/Engine/Engine.vcxproj.filters
+++ b/Engine/msvc10/Engine/Engine.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\Vector3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Timer.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Vector3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Light.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
