--- a/Engine/msvc10/Engine/Engine.vcxproj
+++ b/Engine/msvc10/Engine/Engine.vcxproj
@@ -104,6 +104,8 @@
     <ClInclude Include="..\Camera.h" />
     <ClInclude Include="..\Light.h" />
     <ClInclude Include="..\Mesh.h" />
+    <ClInclude Include="..\Sprite.h" />
+    <ClInclude Include="..\Texture.h" />
     <ClInclude Include="..\Timer.h" />
     <ClInclude Include="..\Vector3.h" />
     <ClInclude Include="..\winmain.h" />
@@ -113,6 +115,8 @@
     <ClCompile Include="..\Camera.cpp" />
     <ClCompile Include="..\Light.cpp" />
     <ClCompile Include="..\Mesh.cpp" />
+    <ClCompile Include="..\Sprite.cpp" />
+    <ClCompile Include="..\Texture.cpp" />
     <ClCompile Include="..\Timer.cpp" />
     <ClCompile Include="..\Vector3.cpp" />
     <ClCompile Include="..\winmain.cpp" />
