Added Entity and Font classes with Font / panel demo

--- a/Engine/msvc10/Engine/Engine.vcxproj.filters
+++ b/Engine/msvc10/Engine/Engine.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="..\Audio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Font.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Timer.cpp">
@@ -90,6 +96,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Audio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Entity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Font.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
