--- a/Engine/msvc10/Engine/Engine.vcxproj
+++ b/Engine/msvc10/Engine/Engine.vcxproj
@@ -103,6 +103,8 @@
     <ClInclude Include="..\Advanced2D.h" />
     <ClInclude Include="..\Audio.h" />
     <ClInclude Include="..\Camera.h" />
+    <ClInclude Include="..\Entity.h" />
+    <ClInclude Include="..\Font.h" />
     <ClInclude Include="..\Input.h" />
     <ClInclude Include="..\Light.h" />
     <ClInclude Include="..\Mesh.h" />
@@ -117,6 +119,8 @@
     <ClCompile Include="..\Advanced2D.cpp" />
     <ClCompile Include="..\Audio.cpp" />
     <ClCompile Include="..\Camera.cpp" />
+    <ClCompile Include="..\Entity.cpp" />
+    <ClCompile Include="..\Font.cpp" />
     <ClCompile Include="..\Input.cpp" />
     <ClCompile Include="..\Light.cpp" />
     <ClCompile Include="..\Mesh.cpp" />
