Edited Console and added collision detection and Distance collision detection demo

--- a/Engine/msvc10/Engine/Engine.vcxproj.filters
+++ b/Engine/msvc10/Engine/Engine.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="..\Font.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Console.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Rect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Timer.cpp">
@@ -102,6 +108,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Font.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Rect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
