--- a/Engine/msvc10/Engine/Engine.vcxproj
+++ b/Engine/msvc10/Engine/Engine.vcxproj
@@ -103,12 +103,14 @@
     <ClInclude Include="..\Advanced2D.h" />
     <ClInclude Include="..\Audio.h" />
     <ClInclude Include="..\Camera.h" />
+    <ClInclude Include="..\Console.h" />
     <ClInclude Include="..\Entity.h" />
     <ClInclude Include="..\Font.h" />
     <ClInclude Include="..\Input.h" />
     <ClInclude Include="..\Light.h" />
     <ClInclude Include="..\Mesh.h" />
     <ClInclude Include="..\ParticleEmitter.h" />
+    <ClInclude Include="..\Rect.h" />
     <ClInclude Include="..\Sprite.h" />
     <ClInclude Include="..\Texture.h" />
     <ClInclude Include="..\Timer.h" />
@@ -119,12 +121,14 @@
     <ClCompile Include="..\Advanced2D.cpp" />
     <ClCompile Include="..\Audio.cpp" />
     <ClCompile Include="..\Camera.cpp" />
+    <ClCompile Include="..\Console.cpp" />
     <ClCompile Include="..\Entity.cpp" />
     <ClCompile Include="..\Font.cpp" />
     <ClCompile Include="..\Input.cpp" />
     <ClCompile Include="..\Light.cpp" />
     <ClCompile Include="..\Mesh.cpp" />
     <ClCompile Include="..\ParticleEmitter.cpp" />
+    <ClCompile Include="..\Rect.cpp" />
     <ClCompile Include="..\Sprite.cpp" />
     <ClCompile Include="..\Texture.cpp" />
     <ClCompile Include="..\Timer.cpp" />
