--- a/Engine/msvc10/Engine/Engine.vcxproj
+++ b/Engine/msvc10/Engine/Engine.vcxproj
@@ -75,7 +75,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;C:\prebuilt-dll-2-9-1-release\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -108,6 +108,7 @@
     <ClInclude Include="..\Font.h" />
     <ClInclude Include="..\Input.h" />
     <ClInclude Include="..\Light.h" />
+    <ClInclude Include="..\Math.h" />
     <ClInclude Include="..\Mesh.h" />
     <ClInclude Include="..\ParticleEmitter.h" />
     <ClInclude Include="..\Rect.h" />
@@ -126,6 +127,7 @@
     <ClCompile Include="..\Font.cpp" />
     <ClCompile Include="..\Input.cpp" />
     <ClCompile Include="..\Light.cpp" />
+    <ClCompile Include="..\Math.cpp" />
     <ClCompile Include="..\Mesh.cpp" />
     <ClCompile Include="..\ParticleEmitter.cpp" />
     <ClCompile Include="..\Rect.cpp" />
