--- a/Engine/msvc10/Engine/Engine.vcxproj.filters
+++ b/Engine/msvc10/Engine/Engine.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="..\Rect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Math.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Timer.cpp">
@@ -114,6 +117,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Rect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
