--- a/Engine/msvc10/Engine/Engine.vcxproj
+++ b/Engine/msvc10/Engine/Engine.vcxproj
@@ -107,11 +107,17 @@
     <ClInclude Include="..\Entity.h" />
     <ClInclude Include="..\Font.h" />
     <ClInclude Include="..\Input.h" />
+    <ClInclude Include="..\lauxlib.h" />
     <ClInclude Include="..\Light.h" />
+    <ClInclude Include="..\lua.h" />
+    <ClInclude Include="..\lua.hpp" />
+    <ClInclude Include="..\luaconf.h" />
+    <ClInclude Include="..\lualib.h" />
     <ClInclude Include="..\Math.h" />
     <ClInclude Include="..\Mesh.h" />
     <ClInclude Include="..\ParticleEmitter.h" />
     <ClInclude Include="..\Rect.h" />
+    <ClInclude Include="..\Script.h" />
     <ClInclude Include="..\Sprite.h" />
     <ClInclude Include="..\Texture.h" />
     <ClInclude Include="..\Timer.h" />
@@ -131,6 +137,7 @@
     <ClCompile Include="..\Mesh.cpp" />
     <ClCompile Include="..\ParticleEmitter.cpp" />
     <ClCompile Include="..\Rect.cpp" />
+    <ClCompile Include="..\Script.cpp" />
     <ClCompile Include="..\Sprite.cpp" />
     <ClCompile Include="..\Texture.cpp" />
     <ClCompile Include="..\Timer.cpp" />
